update file utils

--- a/hr_cnce/views/hr_employee_view.xml
+++ b/hr_cnce/views/hr_employee_view.xml
@@ -23,9 +23,9 @@
 					<field name="num_crrae" />-->
 					<field name="num_cmu" />
 				</xpath>
-				<xpath expr="/form/sheet/notebook/page[2]/group/group[5]" position="replace">
+				<!--<xpath expr="/form/sheet/notebook/page[2]/group/group[5]" position="replace">
 
-				</xpath>
+				</xpath>-->
 				<xpath expr="//field[@name='address_home_id']" position="after">
 					<field name="mobile_personnal" />
 					<field name="email_personal" />
