--- a/biolab/report/sale_report.xml
+++ b/biolab/report/sale_report.xml
@@ -6,96 +6,121 @@
 
     <template id="report_saleorder_document">
         <t t-call="biolab.external_layout_with_header_footer">
-            <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
+            <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)"/>
             <div class="row">
                 <div class="col-6">
                     <img src="/biolab/static/src/img/logo_biolab.png" style="max-width: 100%; margin-bottom: 10px;"/>
                     <div t-field="doc.company_id.partner_id"
-                         t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}' />
+                         t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
                 <div class="col-6 offset-2">
-                    <span>Proforma <span t-esc="doc.name"/></span><br/>
-                    <span>En date du : <span t-esc="doc.date_order"/></span>
-                    <br/><br/>
-                    <strong t-if="doc.partner_shipping_id == doc.partner_invoice_id">Invoicing and Shipping Address:</strong>
-                    <strong t-if="doc.partner_shipping_id != doc.partner_invoice_id">Invoicing Address:</strong>
+                    <span>Proforma
+                        <span t-esc="doc.name"/>
+                    </span>
+                    <br/>
+                    <span>En date du :
+                        <span t-esc="doc.date_order"/>
+                    </span>
+                    <br/>
+                    <br/>
+                    <strong t-if="doc.partner_shipping_id == doc.partner_invoice_id" style="color:black">Invoicing and
+                        Shipping Address:
+                    </strong>
+                    <strong t-if="doc.partner_shipping_id != doc.partner_invoice_id" style="color:black">Invoicing
+                        Address:
+                    </strong>
                     <div t-field="doc.partner_invoice_id"
                          t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                     <t t-if="doc.partner_shipping_id != doc.partner_invoice_id">
-                        <strong>Shipping Address:</strong>
+                        <strong style="color:black">Shipping Address:</strong>
                         <div t-field="doc.partner_shipping_id"
                              t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                     </t>
                 </div>
             </div>
-            <br/><br/>
+            <br/>
+            <br/>
             <div class="page">
                 <style>
                     table {
                     border-collapse: collapse !important;
                     width: 100% !important;
+                    border-color: black;
                     }
 
                     td, th {
                     border: 1px solid #000000 !important;
+                    border-top: black;
                     text-align: left !important;
                     padding: 8px !important;
+                    color: black;
+                    border-color: black;
                     }
                 </style>
                 <div class="oe_structure"/>
 
-                <h2 class="mt16">
+               <!-- <h2 class="mt16">
                     <t t-if="not (env.context.get('proforma', False) or is_pro_forma)">
-                        <span t-if="doc.state not in ['draft','sent']">Order # </span>
-                        <span t-if="doc.state in ['draft','sent']">Quotation # </span>
+                        <span t-if="doc.state not in ['draft','sent']">Order #</span>
+                        <span t-if="doc.state in ['draft','sent']">Quotation #</span>
                     </t>
                     <t t-if="env.context.get('proforma', False) or is_pro_forma">
-                        <span>Pro-Forma Invoice # </span>
+                        <span>Pro-Forma Invoice #</span>
                     </t>
                     <span t-field="doc.name"/>
                 </h2>
 
-                <div class="row mt32 mb32" id="informations">
+                <div class="row mt32 mb32" id="informations" style="color:black;">
                     <div t-if="doc.client_order_ref" class="col-auto col-3 mw-100 mb-2">
                         <strong>Your Reference:</strong>
                         <p class="m-0" t-field="doc.client_order_ref"/>
                     </div>
                     <div t-if="doc.date_order and doc.state not in ['draft','sent']" class="col-auto col-3 mw-100 mb-2">
-                        <strong>Order Date:</strong>
+                        <strong style="color:black;"></strong>
                         <p class="m-0" t-field="doc.date_order"/>
                     </div>
                     <div t-if="doc.date_order and doc.state in ['draft','sent']" class="col-auto col-3 mw-100 mb-2">
-                        <strong>Quotation Date:</strong>
+                        <strong style="color:black;">Date du devis:</strong>
                         <p class="m-0" t-field="doc.date_order" t-options='{"widget": "date"}'/>
                     </div>
-                    <div t-if="doc.validity_date and doc.state in ['draft', 'sent']" class="col-auto col-3 mw-100 mb-2" name="expiration_date">
-                        <strong>Expiration:</strong>
+                    <div t-if="doc.validity_date and doc.state in ['draft', 'sent']" class="col-auto col-3 mw-100 mb-2"
+                         name="expiration_date">
+                        <strong style="color:black;">Expiration:</strong>
                         <p class="m-0" t-field="doc.validity_date"/>
                     </div>
                     <div t-if="doc.user_id.name" class="col-auto col-3 mw-100 mb-2">
-                        <strong>Salesperson:</strong>
+                        <strong style="color:black;">Vendeur:</strong>
                         <p class="m-0" t-field="doc.user_id"/>
                     </div>
-                </div>
+                </div>-->
 
                 <!-- Is there a discount on at least one line? -->
                 <t t-set="display_discount" t-value="any(l.discount for l in doc.order_line)"/>
 
-                <table class="table table-sm o_main_table">
+                <table class="table table-sm o_main_table" style="border-top:black; border-color:black">
                     <!-- In case we want to repeat the header, remove "display: table-row-group" -->
-                    <thead style="display: table-row-group">
-                        <tr>
-                            <th name="th_code" class="text-left">Name/Code</th>
-                            <th name="th_description" class="text-left">Description</th>
-                            <th name="th_quantity" class="text-right">Quantity</th>
-                            <th name="th_priceunit" class="text-right">Unit Price</th>
-                            <th name="th_discount" t-if="display_discount" class="text-right" groups="product.group_discount_per_so_line">
+                    <thead style="display: table-row-group; border-top:black;border-color:black">
+                        <tr style="border-top: black;">
+                            <th name="th_code" class="text-left" style="color:black;border-color:black;">Référence</th>
+                            <th name="th_description" class="text-left" style="color:black;border-color:black">
+                                Désignation
+                            </th>
+                            <th name="th_quantity" class="text-right" style="color:black;border-color:black">Qté
+                            </th>
+                            <th name="th_product_uom" class="text-right" style="color:black;">Unité</th>
+                            <th name="th_priceunit" class="text-right" style="color:black;border-color:black">PU</th>
+                            <!--<th name="th_discount" t-if="display_discount" class="text-right"
+                                style="color:black;border-color:black" groups="product.group_discount_per_so_line">
                                 <span>Disc.%</span>
                             </th>
-                            <th name="th_taxes" class="text-right">Taxes</th>
-                            <th name="th_subtotal" class="text-right">
-                                <span groups="account.group_show_line_subtotals_tax_excluded">Amount</span>
-                                <span groups="account.group_show_line_subtotals_tax_included">Total Price</span>
+                            <th name="th_taxes" class="text-right" style="color:black;">Taxes</th>-->
+                            <th name="th_subtotal" class="text-right" style="color:black;">
+                                <span groups="account.group_show_line_subtotals_tax_excluded" style="color:black;">
+                                    Total HT
+                                </span>
+                                <span groups="account.group_show_line_subtotals_tax_included" style="color:black;">Total
+                                    Price
+                                </span>
                             </th>
                         </tr>
                     </thead>
@@ -105,29 +130,41 @@
 
                         <t t-foreach="doc.order_line" t-as="line">
 
-                            <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
-                            <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
+                            <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal"
+                               groups="account.group_show_line_subtotals_tax_excluded"/>
+                            <t t-set="current_subtotal" t-value="current_subtotal + line.price_total"
+                               groups="account.group_show_line_subtotals_tax_included"/>
 
                             <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
                                 <t t-if="not line.display_type">
-                                    <td name="td_code"><span t-field="line.product_id.name"/></td>
-                                    <td name="td_name"><span t-field="line.name"/></td>
+                                    <td name="td_code">
+                                        <span t-field="line.product_id.name"/>
+                                    </td>
+                                    <td name="td_name">
+                                        <span t-field="line.name"/>
+                                    </td>
                                     <td name="td_quantity" class="text-right">
                                         <span t-field="line.product_uom_qty"/>
                                         <span t-field="line.product_uom" groups="uom.group_uom"/>
                                     </td>
+                                    <td name="td_product_uom" class="text-right">
+                                        <span t-field="line.product_uom"/>
+                                    </td>
                                     <td name="td_priceunit" class="text-right">
                                         <span t-field="line.price_unit"/>
                                     </td>
-                                    <td t-if="display_discount" class="text-right" groups="product.group_discount_per_so_line">
+                                    <!--<td t-if="display_discount" class="text-right"
+                                        groups="product.group_discount_per_so_line">
                                         <span t-field="line.discount"/>
                                     </td>
                                     <td name="td_taxes" class="text-right">
                                         <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_id))"/>
-                                    </td>
+                                    </td>-->
                                     <td name="td_subtotal" class="text-right o_price_total">
-                                        <span t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
-                                        <span t-field="line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
+                                        <span t-field="line.price_subtotal"
+                                              groups="account.group_show_line_subtotals_tax_excluded"/>
+                                        <span t-field="line.price_total"
+                                              groups="account.group_show_line_subtotals_tax_included"/>
                                     </td>
                                 </t>
                                 <t t-if="line.display_type == 'line_section'">
@@ -147,7 +184,7 @@
                             <t t-if="current_section and (line_last or doc.order_line[line_index+1].display_type == 'line_section')">
                                 <tr class="is-subtotal text-right">
                                     <td name="td_section_subtotal" colspan="99">
-                                        <strong class="mr16">Subtotal</strong>
+                                        <strong class="mr16" style="color:black;">SOUS TOTAL</strong>
                                         <span
                                                 t-esc="current_subtotal"
                                                 t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'
@@ -164,7 +201,9 @@
                         <div t-attf-class="#{'col-4' if report_type != 'html' else 'col-sm-7 col-md-5'} ml-auto">
                             <table class="table table-sm">
                                 <tr class="border-black o_subtotal" style="">
-                                    <td name="td_amount_untaxed_label"><strong>Subtotal</strong></td>
+                                    <td name="td_amount_untaxed_label">
+                                        <strong style="color:black;">Total net HT</strong>
+                                    </td>
                                     <td name="td_amount_untaxed" class="text-right">
                                         <span t-field="doc.amount_untaxed"/>
                                     </td>
@@ -174,14 +213,17 @@
                                         <t t-if="amount_by_group[5] == 1 and doc.amount_untaxed == amount_by_group[2]">
                                             <td name="td_amount_by_group_label_3">
                                                 <span t-esc="amount_by_group[0]"/>
-                                                <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'/></span>
+                                                <span>&amp;nbsp;<span>on</span>&amp;nbsp;
+                                                    <t t-esc="amount_by_group[2]"
+                                                       t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'/>
+                                                </span>
                                             </td>
                                             <td name="td_amount_by_group_3" class="text-right o_price_total">
                                                 <span t-esc="amount_by_group[1]"
                                                       t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'/>
                                             </td>
                                         </t>
-                                        <t t-else ="">
+                                        <t t-else="">
                                             <td name="td_amount_by_group_label">
                                                 <span t-esc="amount_by_group[0]"/>
                                             </td>
@@ -193,7 +235,9 @@
                                     </tr>
                                 </t>
                                 <tr class="border-black o_total">
-                                    <td name="td_amount_total_label"><strong>Total</strong></td>
+                                    <td name="td_amount_total_label">
+                                        <strong style="color:black;">Montant total TTC</strong>
+                                    </td>
                                     <td name="td_amount_total" class="text-right">
                                         <span t-field="doc.amount_total"/>
                                     </td>
@@ -203,9 +247,11 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <p>Montant en lettre
-                                <strong>
-                                    <b><span t-field="doc.num_word"/></b>
+                            <p>Montant en lettre:
+                                <strong style="color:black;">
+                                    <b>
+                                        <span t-field="doc.num_word"/>
+                                    </b>
                                 </strong>
                             </p>
                         </div>
@@ -226,20 +272,26 @@
 
                 <div class="oe_structure"/>
 
-                <p t-field="doc.note" />
+                <p t-field="doc.note"/>
+                <p>
+                    <span>Date de validité :</span>
+                    <span t-field="doc.validity_date"/>
+                </p>
+                <p>
+                    <span>Moyen de réglement :</span>
+                    <span t-field="doc.payment_method"/>
+                </p>
+
                 <p t-if="doc.payment_term_id.note">
                     <span t-field="doc.payment_term_id.note"/>
                 </p>
-                <p>
-                    <span>Date de validité</span>
-                    <span t-field="doc.validity_date"/>
-                </p>
+
                 <p id="fiscal_position_remark" t-if="doc.fiscal_position_id and doc.fiscal_position_id.sudo().note">
                     <strong>Fiscal Position Remark:</strong>
                     <span t-field="doc.fiscal_position_id.sudo().note"/>
                 </p>
                 <p>
-                    <span>Delai de livraison</span>
+                    <span>Délai de livraison :</span>
                     <span t-field="doc.commitment_date"/>
                 </p>
             </div>
